--- a/src/components/Botones/Botones.css
+++ b/src/components/Botones/Botones.css
@@ -11,7 +11,7 @@
     justify-content: center;
     gap: 10px;
     /* padding: 12px 25px; */
-    padding: 10px 20px; /
+    padding: 10px 20px;
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
